--- a/src/App.css
+++ b/src/App.css
@@ -272,9 +272,9 @@ footer .input-group-text {
 /* Product Card */
 
 .product-card {
-  padding: 15px;
-  background-color: white;
-  border-radius: 10px;
+  /* padding: 15px; */
+  /* background-color: white; */
+  /* border-radius: 10px; */
   overflow: hidden;
   width: 100%;
 }
