--- a/src/Css/CssHeader.css
+++ b/src/Css/CssHeader.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
      position: fixed;
      top: 0; 
      left: 0; 
@@ -11,5 +11,26 @@
    body {
      padding-top: 160px; 
    }
-   
 
+   
+ */
+
+
+ .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.5s ease-in-out;
+}
+
+.header.hidden {
+  transform: translateY(-100%); /* Ẩn header bằng cách đẩy lên trên */
+}
+
+body {
+  padding-top: 160px; /* Đảm bảo nội dung không bị che */
+}
