--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 :root {
   --color-131921: #131921;
   --color-3b4149: #3b4149;
-  --color-febd69: #febd69;
+  --color-febd69: #3b4149;
   --color-232f3e: #232f3e;
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
@@ -52,11 +52,11 @@ a {
   color: white;
   font-size: 14px;
   padding: 13px 33px;
-  border-radius: 25px;
+  border-radius: 8px;
 }
 .button:hover {
   background-color: var(--color-febd69);
-  color: #131921;
+  color: #FFFFFFFF;
 }
 /* Header Part */
 
@@ -327,7 +327,7 @@ footer .input-group-text {
 /* Special Product */
 
 .special-product-card {
-  padding: 20px 10px;
+  /* padding: 20px 10px; */
   border-radius: 10px;
   background-color: white;
 }
