--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,53 @@ footer .input-group-text {
 /* home wrapper 2 */
 .home-wrapper-2 {
   background-color: var(--color-f5f5f7);
+  
+}
+
+.home-wrapper-2x {
+background: RGBA(255,255,255,1);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 80%, rgba(0, 46, 41, 1) 95%, rgba(0, 23, 23, 1) 100%);
+}
+
+.home-wrapper-x {
+background: #ffffff;
+background: linear-gradient(0deg, rgba(255, 255, 255, 1) 1%, rgba(0, 23, 23, 1) 2%, rgba(0, 64, 57, 1) 50%, rgba(0, 23, 23, 1) 98%, rgba(255, 255, 255, 1) 100%);
+
+color: white;
+}
+.home-wrapper-x1 {
+background: RGBA(255,255,255,1);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 23, 23, 1) 2%, rgba(0, 64, 57, 1) 50%, rgba(0, 23, 23, 1) 100%);
+color: white;
+}
+.home-wrapper-z {
+background: RGBA(0, 23, 23, 1);
+background: linear-gradient(180deg, rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 1) 50%, rgba(0, 23, 23, 1) 100%);
+color: white;
+}
+
+.home-wrapper-y {
+  background:
+    linear-gradient(180deg,rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 1) 2%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(0, 64, 57, 1) 96%, rgba(0, 23, 23, 1) 98%, rgba(255, 255, 255, 1) 100%),
+    linear-gradient(90deg,rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 0.91) 20%, rgba(255, 255, 255, 0) 55%, rgba(255, 255, 255, 0) 95%, rgba(0, 64, 57, 1) 98%, rgba(0, 23, 23, 1) 100%);  color: rgb(0, 0, 0);
+   color: rgb(0, 0, 0); 
+}
+
+.home-wrapper-y2 {
+  background:
+    linear-gradient(180deg,rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 1) 2%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(0, 64, 57, 1) 96%, rgba(0, 23, 23, 1) 98%, rgba(255, 255, 255, 1) 100%),
+    linear-gradient(270deg,rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 0.91) 20%, rgba(255, 255, 255, 0) 55%, rgba(255, 255, 255, 0) 95%, rgba(0, 64, 57, 1) 98%, rgba(0, 23, 23, 1) 100%);  color: rgb(0, 0, 0);
+   color: rgb(0, 0, 0); 
+}
+
+/* .home-wrapper-y {
+background: 	RGBA(0, 23, 23, 1);
+background: linear-gradient(180deg, rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 1) 2%, rgba(255, 255, 255, 0) 10%, rgba(255, 255, 255, 0) 90%, rgba(0, 64, 57, 1) 98%, rgba(0, 23, 23, 1) 100%);
+color: rgb(0, 0, 0);
+} */
+.home-wrapper-yx {
+background: RGBA(0, 23, 23, 1);
+background: linear-gradient(90deg, rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 0.91) 20%, rgba(255, 255, 255, 0) 55%, rgba(255, 255, 255, 0) 96%, rgba(0, 23, 23, 1) 100%);
 }
 
 /* home wrapper 2 ends */
@@ -300,6 +347,15 @@ footer .input-group-text {
   color: var(--color-bf4800);
   font-size: 13px;
 }
+.product-card .product-details h8 {
+  color: #ff6101;
+  font-size: 13px;
+}
+.product-card .product-details h9 {
+  font-size: 15px;
+  color: #fff;
+}
+
 .product-card .product-details h5 {
   font-size: 15px;
   color: var(--color-1c1c1b);
@@ -779,3 +835,66 @@ footer .input-group-text {
 }
 
 /* Shipping page ends here */
+.gold-toggle-btn {
+  background-color: rgba(255, 255, 255, 0.15); /* nền trắng mờ */
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+  padding: 10px 20px;
+  width: 180px;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-text {
+  position: relative;
+  z-index: 2;
+}
+
+.btn-icon {
+  width: 80px;
+  height: 660px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) scale(0.5);
+  opacity: 0;
+  transition: all 0.4s ease;
+  z-index: 1;
+  object-fit: contain;
+}
+
+.icon-left {
+  left: 50%;
+}
+
+.icon-right {
+  right: 50%;
+}
+
+.gold-toggle-btn:hover .icon-left {
+  left: -10px;
+  opacity: 1;
+  transform: translateY(-50%) scale(1);
+}
+
+.gold-toggle-btn:hover .icon-right {
+  right: -10px;
+  opacity: 1;
+  transform: translateY(-50%) scale(1);
+}
+
+.gold-toggle-btn:active {
+  transform: scale(0.97);
+}
