--- a/src/Css/CssSingleProduct.css
+++ b/src/Css/CssSingleProduct.css
@@ -166,5 +166,78 @@
     overflow-y: auto;
   }
   
+.bg-tab-gradient {
+  background: radial-gradient(circle, rgba(0, 82, 72, 1) 0%, rgba(0, 46, 39, 1) 66%, rgba(0, 0, 0, 1) 100%);
+}
 
    
+
+
+.gold-toggle-btn-sp {
+  background-color: rgba(255, 255, 255, 0.15);
+  color: #002E29;
+  font-weight: bold;
+  font-size: 16px; /* khớp với btn-order-submit */
+  border: 2px solid #000000;
+  border-radius: 8px;
+  padding: 12px 24px;
+  width: 220px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.gold-toggle-btn-sp:hover {
+  background-color: #dc3545;
+  border-color: #dc3545;
+  color: #fff;
+}
+
+.gold-toggle-btn-sp .btn-inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.gold-toggle-btn-sp .btn-text {
+  position: relative;
+  z-index: 2;
+}
+
+.gold-toggle-btn-sp .btn-icon {
+  width: 80px;
+  height: 660px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) scale(0.5);
+  opacity: 0;
+  transition: all 0.4s ease;
+  z-index: 1;
+  object-fit: contain;
+}
+
+.gold-toggle-btn-sp .icon-left {
+  left: 50%;
+}
+
+.gold-toggle-btn-sp .icon-right {
+  right: 50%;
+}
+
+.gold-toggle-btn-sp:hover .icon-left {
+  left: -10px;
+  opacity: 1;
+  transform: translateY(-50%) scale(1);
+}
+
+.gold-toggle-btn-sp:hover .icon-right {
+  right: -10px;
+  opacity: 1;
+  transform: translateY(-50%) scale(1);
+}
+
+.gold-toggle-btn-sp:active {
+  transform: scale(0.97);
+}
