--- a/src/Css/CssSingleProduct.css
+++ b/src/Css/CssSingleProduct.css
@@ -241,3 +241,26 @@
 .gold-toggle-btn-sp:active {
   transform: scale(0.97);
 }
+
+/* ReviewPopup.css */
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-content {
+  background: white;
+  padding: 24px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 500px;
+  position: relative;
+}
