--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,11 @@ background: RGBA(255,255,255,1);
 background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 23, 23, 1) 2%, rgba(0, 64, 57, 1) 50%, rgba(0, 23, 23, 1) 100%);
 color: white;
 }
+.home-wrapper-xq {
+background: RGBA(255, 255, 255, 1);
+background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 23, 23, 1) 2%, rgba(0, 64, 57, 1) 50%,rgba(0, 23, 23, 1) 98%, rgba(255, 255, 255, 0) 100%);
+color: white;
+}
 .home-wrapper-z {
 background: RGBA(0, 23, 23, 1);
 background: linear-gradient(180deg, rgba(0, 23, 23, 1) 0%, rgba(0, 64, 57, 1) 50%, rgba(0, 23, 23, 1) 100%);
