--- a/src/Css/CssChatBot.css
+++ b/src/Css/CssChatBot.css
@@ -14,3 +14,12 @@
   100% { transform: translate(-50%, -50%) rotate(405deg); }
 }
 
+/* Ẩn scrollbar nhưng vẫn cuộn được */
+.scrollbar-hide {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
+}
